# aigent_framework

./: .gitignore  Anchor.toml  README.md  setup_guide.md
ALF_web/: index.html  script.js  styles.css
bots/: Discord AiGent Rental.py  Discord Marketplace.py  Telegram AiGent Rental.py  Telegram Marketplace.py
docs/: CONTRIBUTING.md  DEVELOPMENT.md  dev_manual.md
programs/aigent_framework/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
programs/aigent_framework/docs/: README.md
programs/aigent_framework/src/: lib.rs
